@@ -20,6 +20,8 @@ tar zxvf apache-tomcat-8.0.32.tar.gz #解压文件
 mv apache-tomcat-8.0.32 tomcat #修改名字
 ```
 # <a name="tomcat-02" href="#" >配置</a>
+
+>1、配置变量环境
 ```shell
 vi /etc/profile
 ```
@@ -36,6 +38,22 @@ source /etc/profile #让修改生效
 
 catalina.sh version #查看版本
 ```
+>2、修改配置文件
+
+![](image/1-1.png)
+
+``` shell
+vim /usr/local/tomcat/bin/catalina.sh
+```
+
+```shell
+JAVA_OPTS="-Xms512m -Xmx1024m -Xss1024K -XX:PermSize=512m -XX:MaxPermSize=1024m"
+export TOMCAT_HOME=/usr/local/tomcat
+export CATALINA_HOME=/usr/local/tomcat
+export JRE_HOME=/usr/local/java/jdk
+export JAVA_HOME=/usr/local/java/jdk
+```
+
 # <a name="tomcat-03" href="#" >测试</a>
 ```shell
 cd ~
@@ -56,4 +74,4 @@ cd /usr/local/tomcat/bin
 
  ps -ef|grep java  # 查询状态
 ```
-![](image/1-1.png)
+![](image/1-2.png)
